--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "browser-sync start --server . --files *.js, *.css, *.html"
+    "start": "browser-sync start --server . --files *.js, *.css, *.html",
+    "build": "webpack-cli"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/l0rdcafe/imdb-scroll/issues"
   },
-  "homepage": "https://github.com/l0rdcafe/imdb-scroll#readme"
+  "homepage": "https://github.com/l0rdcafe/imdb-scroll#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5"
+  }
 }
